# trace

./: .gitignore  CLAUDE.md  README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
.claude/rules/: agents.md  architecture.md  code-style.md  jira.md
.github/workflows/: release.yml
design/: ClaudeOrchestrator.html  app.jsx  board.jsx  data.js  detail.jsx  icons.jsx  orchestrator.jsx  styles.css  views.jsx
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  helpers.rs  lib.rs  main.rs  state.rs
src-tauri/src/claude/: discovery.rs  env.rs  mod.rs  pty.rs  render_bridge.rs
src-tauri/src/commands/: agent.rs  diff.rs  editor.rs  groups.rs  jira.rs  mod.rs  orchestrator.rs  pr.rs  repos.rs  rich_output.rs  session.rs  tests.rs  update.rs  worktrees.rs
src-tauri/src/jira/: auth.rs  board.rs  client.rs  dev.rs  mod.rs  models.rs
src/app/: Rail.tsx  SearchPalette.tsx  Topbar.tsx  nav.ts  search.ts  shell.css  toast.ts
src/components/: AgentAvatar.tsx  AppLogo.tsx  ErrorBoundary.tsx  Icon.tsx  Markdown.tsx  Modal.tsx  StatusPill.tsx  Switch.tsx  Toaster.tsx
src/domains/activity/: ActivityView.tsx  activity.css  store.ts
src/domains/agent/: AgentDetail.tsx  ContextRail.tsx  DetailHeader.tsx  FilesPane.tsx  PrPane.tsx  (+17 more)
src/ipc/: agent.ts  diff.ts  editor.ts  events.ts  jira.ts  notify.ts  orchestrator.ts  pr.ts  repos.ts  richOutput.ts  session.ts  tests.ts  update.ts  worktrees.ts
src/styles/: globals.css  tokens.css
(+64 files in other folders)
