[package]
name = "trace"
version = "0.1.0"
description = "Jira-driven Kanban for managing parallel Claude coding sessions"
authors = ["ron"]
edition = "2021"

[lib]
name = "trace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Process signals
libc = "0.2"

# Interactive PTY transport (hosts the real Claude TUI)
portable-pty = "0.8"
base64 = "0.22"

# Jira Cloud REST client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
regex = "1"
thiserror = "2"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
